--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database
-spring.datasource.url=jdbc:mysql://localhost:3306/product
-spring.datasource.username=root
-spring.datasource.password=pass1234
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/product
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.h2.server: DEBUG
