--- a/product-api/k8s/1/mysql-deployment.yaml
+++ b/product-api/k8s/1/mysql-deployment.yaml
@@ -61,7 +61,21 @@ spec:
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
+        - name: mysql-initdb
+          mountPath: /docker-entrypoint-initdb.d
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
           claimName: mysql-pv-claim
+      - name: mysql-initdb
+        configMap:
+          name: mysql-initdb-config
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-initdb-config
+data:
+  initdb.sql: |
+    CREATE TABLE product (id INT, version VARCHAR(512), name VARCHAR(512), price INT, product_id VARCHAR(255));
+    INSERT INTO product VALUES (1, 'v1', 'JUST SOME ITEM', 32, '_vHjnksjdvDSjjLlkdk');
