--- a/product-api/k8s/1/mysql-deployment.yaml
+++ b/product-api/k8s/1/mysql-deployment.yaml
@@ -77,5 +77,5 @@ metadata:
   name: mysql-initdb-config
 data:
   initdb.sql: |
-    CREATE TABLE product (id INT, version VARCHAR(512), name VARCHAR(512), price INT, product_id VARCHAR(255));
-    INSERT INTO product (id, name, price, product_id) VALUES (1, 'JUST SOME ITEM', 32, '_vHjnksjdvDSjjLlkdk');
+    CREATE TABLE product (id int(11) NOT NULL AUTO_INCREMENT, name varchar(512) CHARACTER SET utf8 DEFAULT NULL, price int(11) DEFAULT NULL, product_id varchar(255) COLLATE utf8_unicode_ci DEFAULT NULL, PRIMARY KEY ('id')) ENGINE=InnoDB AUTO_INCREMENT=4 DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
+    INSERT INTO product (name, price, product_id) VALUES ('JUST SOME ITEM', 32000, '_vHjnksjdvDSjjLlkdk');
