--- a/k8s/3/my-shopping-app-ingress-rule.yaml
+++ b/k8s/3/my-shopping-app-ingress-rule.yaml
@@ -1,21 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: product-api-ingress
+  name: my-shopping-app-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: product-api.info
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: product
-                port:
-                  number: 8080
     - host: my-shopping-app.info
       http:
         paths:
