--- a/product-api/pom.xml
+++ b/product-api/pom.xml
@@ -46,7 +46,11 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -95,7 +99,7 @@
                                 <ports>
                                     <port>${app.port.expose}</port>
                                 </ports>
-                                <entryPoint>java -jar maven/${project.artifactId}-${project.version}.jar</entryPoint>
+                                <entryPoint>java -jar -Dspring.profiles.active=prod maven/${project.artifactId}-${project.version}.jar</entryPoint>
                             </build>
                             <run>
                                 <ports>
