--- a/k8s/3/product-ingress-rule.yaml
+++ b/k8s/3/product-ingress-rule.yaml
@@ -9,7 +9,7 @@ spec:
     - host: product-api.info
       http:
         paths:
-          - path: /products
+          - path: /
             pathType: Prefix
             backend:
               service:
