--- a/k8s/3/product-ingress-rule.yaml
+++ b/k8s/3/product-ingress-rule.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: product-api-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: product-api.info
