--- a/product-api/Jenkinsfile
+++ b/product-api/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline{
     agent any
+    environment {
+        DOCKER_HOST = 'tcp://192.168.49.2:2375'
+    }
     tools {
         maven '3.8.7'
     }
