--- a/product-api/Jenkinsfile
+++ b/product-api/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent any
     environment {
-        DOCKER_HOST = 'tcp://192.168.49.2:2375'
+        DOCKER_HOST = 'unix:///var/run/docker.sock'
     }
     tools {
         maven '3.8.7'
