--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=product-api
 
 logging.file.max-history=2
 logging.file.max-size=10MB
-logging.file=/app/product-api.log
+logging.level.root=INFO
+logging.file=C://app/product-api.log
