--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=product-api
 logging.file.max-history=2
 logging.file.max-size=10MB
 logging.level.root=INFO
-logging.file=C://app/product-api.log
+logging.file.path=/app/
