--- a/k8s/1/pv-3Gi.yaml
+++ b/k8s/1/pv-3Gi.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     type: local
 spec:
+  claimRef:
+    namespace: default
+    name: mysql-pv-claim
   storageClassName: standard
   capacity:
     storage: 3Gi
