--- a/k8s/pv, pvc demo/nginx-deployment.yaml
+++ b/k8s/pv, pvc demo/nginx-deployment.yaml
@@ -32,7 +32,7 @@ spec:
         tier: backend
     spec:
       containers:
-        - image: registry.hub.docker.com/jagansingh/nginx-api:latest
+        - image: nginx:latest
           name: nginx
           ports:
             - containerPort: 80
