--- a/k8s/pv, pvc demo/nginx-deployment.yaml
+++ b/k8s/pv, pvc demo/nginx-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         app: nginx
         tier: backend
     spec:
-      init-container:
+      initContainers:
         - command:
             - "/bin/sh"
             - "-c"
